--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     nifi:
         hostname: upananifi
         container_name: nifi-contenedor
-        image: 'apache/nifi:1.14.0'  
+        image: 'apache/nifi:1.25.0'  
         ports:
             - '8091:8080'
         networks:
@@ -82,6 +82,49 @@ services:
         networks:
             - nifired
         restart: always
+    
+    postgres:
+      hostname: postgres
+      container_name: postgres
+      image: 'postgres:14-bullseye' 
+      environment:
+          POSTGRES_USER: 'postgres'
+          POSTGRES_PASSWORD: 'lapicero2.'
+          PGDATA: /data/postgres
+      volumes:
+          - /home/ia-dev/lake/postgres:/data/postgres
+      ports:
+          - "10008:5432"
+      networks:
+          - nifired
+      restart: on-failure
+      healthcheck:
+          test: ["CMD", "pg_isready","-U", "postgres"]
+          interval: 30s
+          timeout: 20s
+          retries: 3
+
+
+    ditda-pgadmin:
+      hostname: pgadmin
+      container_name: pgadmin
+      image: 'elestio/pgadmin:REL-8_4'
+      environment:
+          PGADMIN_DEFAULT_EMAIL: 'usuario'
+          PGADMIN_DEFAULT_PASSWORD: 'lapicero2.'
+          PGADMIN_CONFIG_SERVER_MODE: 'False'
+      volumes:
+          - /home/ia-dev/lake/pgadmin:/var/lib/pgadmin
+      ports:
+          - "10009:80"
+      networks:
+          - nifired
+      restart: on-failure
+      healthcheck:
+          test: ["CMD", "curl", "-f", "http://pgadmin:80/misc/ping"]
+          interval: 30s
+          timeout: 20s
+          retries: 3
 
 volumes:
     nifi-database_repository:
